// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RSVP block reducer should reset the IAC value to none 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the IAC value to allowed 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "allowed",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the IAC value to required 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "required",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the created flag 1`] = `
{
  "created": true,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the going count 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 10,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the has attendee info fields 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": true,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the has changes 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": true,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the has duration error 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "hasDurationError": true,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the id 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 42,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is loading 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": true,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is modal open 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": true,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the is settings loading 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": true,
  "notGoingCount": 0,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the not going count 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 10,
  "settingsOpen": false,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;

exports[`RSVP block reducer should set the settings open 1`] = `
{
  "created": false,
  "details": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
  "goingCount": 0,
  "hasAttendeeInfoFields": false,
  "hasChanges": false,
  "headerImage": {
    "alt": "",
    "id": 0,
    "src": "",
  },
  "iac": "none",
  "id": 0,
  "isAddEditOpen": false,
  "isLoading": false,
  "isModalOpen": false,
  "isSettingsLoading": false,
  "notGoingCount": 0,
  "settingsOpen": true,
  "tempDetails": {
    "capacity": "",
    "description": "",
    "endDate": "",
    "endDateInput": "2019-30-5",
    "endDateMoment": "2019-07-19T21:30:00.000Z",
    "endTime": "",
    "endTimeInput": "",
    "notGoingResponses": false,
    "startDate": "",
    "startDateInput": "2018-30-4",
    "startDateMoment": "2018-07-19T19:30:00.000Z",
    "startTime": "",
    "startTimeInput": "",
    "title": "",
  },
}
`;
